# TaxiServiceSimulator

./: .gitignore  README.md
Client/: CMakeLists.txt  CMakeLists.txt.user.0d01512.xml  cab.cpp  cab.h  cab.qml  clientcommodule.cpp  clientcommodule.h  controller.cpp  controller.h  environment.cpp  environment.h  main.cpp  main.qml  qml.qrc
Client/images/: nesto ko readme.docx
Client/serialib/doc/html/: classtime_out-members.html
Server/: CMakeLists.txt
Server/include/: AStarSearch.h  Cab.h  ServerComModule.h  ServerController.h
Server/src/: AStarSearch.cpp  Cab.cpp  ServerComModule.cpp  ServerController.cpp  main.cpp
